--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.50.0",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.4.6",
     "web-vitals": "^2.1.4",
