Updates for 6 April meeting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Formik", "lightgray", "Swal", "sweetalert"]
+  "cSpell.words": [
+    "Formik",
+    "Horiz",
+    "labelledby",
+    "lightgray",
+    "Swal",
+    "sweetalert"
+  ]
 }
